--- a/pom.xml
+++ b/pom.xml
@@ -336,6 +336,7 @@
             <artifactId>spring-security-data</artifactId>
         </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
+        
     </dependencies>
 
     <build>
@@ -512,11 +513,11 @@
                     <configuration>
                         <changeLogFile>src/main/resources/config/liquibase/master.xml</changeLogFile>
                         <diffChangeLogFile>src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
-                        <driver></driver>
-                        <url></url>
+                        <driver>org.postgresql.Driver</driver>
+                        <url>jdbc:postgresql://localhost:5432/accounting</url>
                         <defaultSchemaName></defaultSchemaName>
-                        <username>accounting</username>
-                        <password></password>
+                        <username>admin</username>
+                        <password>admin</password>
                         <referenceUrl>hibernate:spring:sk.bidaya.accounting.domain?dialect=&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                         <verbose>true</verbose>
                         <logging>debug</logging>
@@ -578,7 +579,7 @@
                             <requireJavaVersion>
                                 <!-- Until JHipster supports JDK 9 -->
                                 <message>You are running an incompatible version of Java. JHipster requires JDK ${java.version}</message>
-                                <version>[1.8,1.9)</version>
+                                <version>[1.8,)</version>
                             </requireJavaVersion>
                         </rules>
                     </configuration>
