--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -1,5 +1,5 @@
 # ===================================================================
-# Spring Boot configuration for the "dev" profile.
+# Spring Boot configuration for the "prod" profile.
 #
 # This configuration overrides the application.yml file.
 #
@@ -15,9 +15,9 @@
 
 logging:
     level:
-        ROOT: DEBUG
-        io.github.jhipster: DEBUG
-        sk.bidaya.accounting: DEBUG
+        ROOT: INFO
+        sk.bidaya.accounting: INFO
+        io.github.jhipster: INFO
 
 spring:
     profiles:
@@ -37,17 +37,14 @@ spring:
             indent-output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:h2:mem:accounting;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+        url: jdbc:postgresql://localhost:5432/accounting
         username: accounting
         password:
         hikari:
             auto-commit: false
-    h2:
-        console:
-            enabled: false
     jpa:
-        database-platform: io.github.jhipster.domain.util.FixedH2Dialect
-        database: H2
+        database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
+        database: POSTGRESQL
         show-sql: true
         properties:
             hibernate.id.new_generator_mappings: true
